[gd_scene load_steps=7 format=3 uid="uid://do3vl4en578a0"]

[ext_resource type="PhysicsMaterial" uid="uid://c2rr6lsswirbj" path="res://Balls/ball_physics_material.tres" id="1_2ad7n"]
[ext_resource type="Script" path="res://Balls/ball.gd" id="1_8kd3k"]
[ext_resource type="AudioStream" uid="uid://bf2rw5kmi1daa" path="res://Balls/ball_clack.wav" id="2_a25b7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v7fly"]
radius = 0.285

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_43uul"]
metallic = 0.15
point_size = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_ccdwe"]
material = SubResource("StandardMaterial3D_43uul")
radius = 0.285
height = 0.57

[node name="Ball" type="RigidBody3D"]
collision_layer = 2
collision_mask = 7
mass = 10.0
physics_material_override = ExtResource("1_2ad7n")
max_contacts_reported = 8
contact_monitor = true
angular_damp = 2.0
script = ExtResource("1_8kd3k")

[node name="BallImpact" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_a25b7")
max_db = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_v7fly")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("SphereMesh_ccdwe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
